source_group(Files REGULAR_EXPRESSION ".*")

			
set( SOURCES
	wg2_anim.cpp
	wg2_anim.h
	wg2_animplayer.cpp
	wg2_animplayer.h
	wg2_base.cpp
	wg2_base.h
	wg2_blockset.cpp
	wg2_blockset.h
	wg2_button.cpp
	wg2_button.h
	wg2_canvascapsule.cpp
	wg2_canvascapsule.h
	wg2_capsule.cpp
	wg2_capsule.h
	wg2_chart.cpp
	wg2_chart.h
	wg2_chart2.cpp
	wg2_chart2.h
	wg2_checkbox.cpp
	wg2_checkbox.h
	wg2_color.h
	wg2_colorset.cpp
	wg2_colorset.h
	wg2_container.cpp
	wg2_container.h
	wg2_cursor.cpp
	wg2_cursor.h
	wg2_cursorinstance.cpp
	wg2_cursorinstance.h
	wg2_dragndroplayer.cpp
	wg2_dragndroplayer.h
	wg2_event.cpp
	wg2_event.h
	wg2_eventfilter.cpp
	wg2_eventfilter.h
	wg2_eventhandler.cpp
	wg2_eventhandler.h
	wg2_eventlogger.cpp
	wg2_eventlogger.h
	wg2_filler.cpp
	wg2_filler.h
	wg2_flexpanel.cpp
	wg2_flexpanel.h
	wg2_flowpanel.cpp
	wg2_flowpanel.h
	wg2_fpsdisplay.cpp
	wg2_fpsdisplay.h
	wg2_geo.h
	wg2_gfxanim.cpp
	wg2_gfxanim.h
	wg2_gfxdevice.cpp
	wg2_gfxdevice.h
	wg2_hook.cpp
	wg2_hook.h
	wg2_iconholder.cpp
	wg2_iconholder.h
	wg2_image.cpp
	wg2_image.h
	wg2_interface_edittext.h
	wg2_interface_textholder.cpp
	wg2_interface_textholder.h
	wg2_key.h
	wg2_knob.cpp
	wg2_knob.h
	wg2_layer.cpp
	wg2_layer.h
	wg2_lineeditor.cpp
	wg2_lineeditor.h
	wg2_modallayer.cpp
	wg2_modallayer.h
	wg2_mouseblocker.cpp
	wg2_mouseblocker.h
	wg2_multislider.cpp
	wg2_multislider.h
	wg2_oscilloscope.cpp
	wg2_oscilloscope.h
	wg2_packpanel.cpp
	wg2_packpanel.h
	wg2_panel.cpp
	wg2_panel.h
	wg2_patches.cpp
	wg2_patches.h
	wg2_pen.cpp
	wg2_pen.h
	wg2_pianokeyboard.cpp
	wg2_pianokeyboard.h
	wg2_popuplayer.cpp
	wg2_popuplayer.h
	wg2_popupopener.cpp
	wg2_popupopener.h
	wg2_radiobutton.cpp
	wg2_radiobutton.h
	wg2_rangeslider.cpp
	wg2_rangeslider.h
	wg2_renderlayercapsule.cpp
	wg2_renderlayercapsule.h
	wg2_root.h
	wg2_rootpanel.cpp
	wg2_rootpanel.h
	wg2_rulerlabels.cpp
	wg2_rulerlabels.h
	wg2_scaleimage.cpp
	wg2_scaleimage.h
	wg2_scrollchart.cpp
	wg2_scrollchart.h
	wg2_scrollpanel.cpp
	wg2_scrollpanel.h
	wg2_shadercapsule.cpp
	wg2_shadercapsule.h
	wg2_shadowlayer.cpp
	wg2_shadowlayer.h
	wg2_simpleknob.cpp
	wg2_simpleknob.h
	wg2_simplevolumemeter.cpp
	wg2_simplevolumemeter.h
	wg2_sizebroker.cpp
	wg2_sizebroker.h
	wg2_sizecapsule.cpp
	wg2_sizecapsule.h
	wg2_slider.cpp
	wg2_slider.h
	wg2_slidertarget.cpp
	wg2_slidertarget.h
	wg2_smartptr.cpp
	wg2_smartptr.h
	wg2_stackpanel.cpp
	wg2_stackpanel.h
	wg2_switch.cpp
	wg2_switch.h
	wg2_text.cpp
	wg2_text.h
	wg2_textdisplay.cpp
	wg2_textdisplay.h
	wg2_tooltiplayer.cpp
	wg2_tooltiplayer.h
	wg2_tuner.h
	wg2_tuner.cpp
	wg2_types.h
	wg2_userdefines.h
	wg2_util.cpp
	wg2_util.h
	wg2_valueformat.cpp
	wg2_valueformat.h
	wg2_vectorpanel.cpp
	wg2_vectorpanel.h
	wg2_volumemeter.cpp
	wg2_volumemeter.h
	wg2_widget.cpp
	wg2_widget.h
	wg2_widgetholder.cpp
	wg2_widgetholder.h
	wg2_zoomoutcapsule.cpp
	wg2_zoomoutcapsule.h

	wglegacygui.h

	../../wondergui/base/wg_animframes.cpp
	../../wondergui/base/wg_animframes.h
	../../wondergui/base/wg_char.h
	../../wondergui/base/wg_charbuffer.cpp
	../../wondergui/base/wg_charbuffer.h
	../../wondergui/base/wg_charseq.cpp
	../../wondergui/base/wg_charseq.h
	../../wondergui/base/wg_codepages.cpp
	../../wondergui/base/wg_codepages.h
	../../wondergui/base/wg_dynamicvector.h
	../../wondergui/base/wg_skinslotmanager.cpp
	../../wondergui/base/wg_skinslotmanager.h
	../../wondergui/base/wg_state.cpp
	../../wondergui/base/wg_state.h
	../../wondergui/base/wg_staticvector.h
	../../wondergui/base/wg_string.cpp
	../../wondergui/base/wg_string.h
	../../wondergui/base/wg_textlink.cpp
	../../wondergui/base/wg_textlink.h
	../../wondergui/base/wg_textstyle.cpp
	../../wondergui/base/wg_textstyle.h
	../../wondergui/base/wg_textstylemanager.cpp
	../../wondergui/base/wg_textstylemanager.h
	../../wondergui/base/wg_texttool.cpp
	../../wondergui/base/wg_texttool.h
	../../wondergui/base/wg_util.cpp
	../../wondergui/base/wg_util.h

	../../wondergui/skins/wg_animskin.cpp
	../../wondergui/skins/wg_animskin.h
	../../wondergui/skins/wg_skin.cpp
	../../wondergui/skins/wg_skin.h
	../../wondergui/skins/wg_skin.impl.h
	../../wondergui/skins/wg_stateskin.cpp
	../../wondergui/skins/wg_stateskin.h	
	../../wondergui/skins/anim/wg_spinanimskin.cpp
	../../wondergui/skins/anim/wg_spinanimskin.h
	../../wondergui/skins/meter/wg_fillmeterskin.cpp
	../../wondergui/skins/meter/wg_fillmeterskin.h
	../../wondergui/skins/meter/wg_framemeterskin.cpp
	../../wondergui/skins/meter/wg_framemeterskin.h
	../../wondergui/skins/meter/wg_piemeterskin.cpp
	../../wondergui/skins/meter/wg_piemeterskin.h
	../../wondergui/skins/meter/wg_spinmeterskin.cpp
	../../wondergui/skins/meter/wg_spinmeterskin.h
	../../wondergui/skins/misc/wg_bakeskin.cpp
	../../wondergui/skins/misc/wg_bakeskin.h
	../../wondergui/skins/misc/wg_doubleskin.cpp
	../../wondergui/skins/misc/wg_doubleskin.h
	../../wondergui/skins/state/wg_blockskin.cpp
	../../wondergui/skins/state/wg_blockskin.h
	../../wondergui/skins/state/wg_boxskin.cpp
	../../wondergui/skins/state/wg_boxskin.h
	../../wondergui/skins/state/wg_circleskin.cpp
	../../wondergui/skins/state/wg_circleskin.h
	../../wondergui/skins/state/wg_colorskin.cpp
	../../wondergui/skins/state/wg_colorskin.h
	../../wondergui/skins/state/wg_multiblockskin.cpp
	../../wondergui/skins/state/wg_multiblockskin.h
	../../wondergui/skins/state/wg_scrollskin.cpp
	../../wondergui/skins/state/wg_scrollskin.h
	../../wondergui/skins/state/wg_tileskin.cpp
	../../wondergui/skins/state/wg_tileskin.h
	../../wondergui/skins/static/wg_staticblockskin.cpp
	../../wondergui/skins/static/wg_staticblockskin.h
	../../wondergui/skins/static/wg_staticboxskin.cpp
	../../wondergui/skins/static/wg_staticboxskin.h
	../../wondergui/skins/static/wg_staticcolorskin.cpp
	../../wondergui/skins/static/wg_staticcolorskin.h
	../../wondergui/skins/static/wg_staticgradientskin.cpp
	../../wondergui/skins/static/wg_staticgradientskin.h
	../../wondergui/skins/static/wg_statictileskin.cpp
	../../wondergui/skins/static/wg_statictileskin.h

)

set(INCDIRS
	${WONDERGUI_INCDIRS}
	${WGFREETYPEFONT_INCDIRS}
	${CMAKE_CURRENT_LIST_DIR}
)


add_library( wglegacygui STATIC ${SOURCES} )
target_include_directories(wglegacygui PRIVATE ${INCDIRS} )
target_link_libraries(wglegacygui PUBLIC wonderglyphs wgfreetypefont )

set_target_properties( wglegacygui PROPERTIES FOLDER "Extensions" )


list(TRANSFORM SOURCES PREPEND ${CMAKE_CURRENT_LIST_DIR}/ )
set(WGLEGACYGUI_SOURCES ${SOURCES} PARENT_SCOPE)
set(WGLEGACYGUI_INCDIRS ${INCDIRS} PARENT_SCOPE)
